force-app/main/default/objects/Interview__c/fields/ESC_NBC_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Client_Name__c</fullName>
    <formula>Job_Opening__r.Client__r.Name</formula>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>