force-app/main/default/objects/Interview__c/fields/Interviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the interviewer on the client side</description>
    <inlineHelpText>Put the name of the interviewer on the client side</inlineHelpText>
    <label>Interviewer Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>