force-app/main/default/objects/Interview__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <label>Prospect</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ESC_NBC_Prospect__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Active Prospect</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ESC_NBC_Prospect__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>