force-app/main/default/objects/Interview__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Submission</fullName>
                <default>true</default>
                <label>In Submission</label>
            </value>
            <value>
                <fullName>Submission Completed</fullName>
            </value>
            <value>
                <fullName>Client_Rejected</fullName>
                <label>Client Rejected</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <label>Interview Scheduled</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Interview Failed</label>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Submit_Sales_Rep</fullName>
                <isActive>false</isActive>
                <label>Submit to Sales Rep</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <isActive>false</isActive>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Submitted to client</fullName>
                <isActive>false</isActive>
                <label>Submitted to client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>