force-app/main/default/objects/Interview__c/fields/Zoom_Interview_Link__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Interview_Link__c</fullName>
    <label>Zoom Interview Link</label>
    <type>Url</type>
</CustomField>