force-app/main/default/objects/Interview__c/recordTypes/Interview.recordType-meta.xml
<RecordType>
    <fullName>Interview</fullName>
    <active>true</active>
    <label>Interview</label>
</RecordType>