force-app/main/default/objects/Interview__c/validationRules/ESC_NBC_Interview_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ESC_NBC_Interview_Date_Required</fullName>
    <active>true</active>
    <description>For Interview Record Type</description>
    <errorConditionFormula>AND(
				 ISNULL(Interview_Date__c),
				 RecordType.DeveloperName == &apos;Interview&apos;
)</errorConditionFormula>
    <errorDisplayField>Interview_Date__c</errorDisplayField>
    <errorMessage>Interview Date is required for interview.</errorMessage>
</ValidationRule>