force-app/main/default/objects/Interview__c/validationRules/Prospect_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Prospect_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Prospect__c )</errorConditionFormula>
    <errorMessage>Prospect is required to save a record</errorMessage>
</ValidationRule>